--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,6 +1,6 @@
 <div class="card">
   <p-menubar [model]="items">
-    <div *ngIf="isLoggedIn">
+    <!-- <div *ngIf="isLoggedIn">
       <button
         type="button"
         pButton
@@ -8,6 +8,6 @@
         icon="pi pi-power-off"
         style="margin-left: 0.25em"
       ></button>
-    </div>
+    </div> -->
   </p-menubar>
 </div>
