--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -1,27 +1,28 @@
 :host ::ng-deep .p-menubar {
-    border: 1px green;
-    border-style: solid;
-    border-radius: 20px;
-    box-shadow: 0px 4px 6px 0px green;
+  border: 1px #4caf50;
+  border-style: solid;
+  border-radius: 20px;
+  box-shadow: 0px 4px 6px 0px green;
 }
-  
+
 :host ::ng-deep .p-menuitem {
-    background-color: rgb(173, 255, 106);
-    margin: 12px;
-    padding: 5px 5px 5px 5px ;
+  background-color: #4caf50;
+  color: white;
+  margin: 12px;
+  padding: 10px 10px 10px 10px;
 }
 
 :host ::ng-deep .p-menubar div {
-    margin: 5px 5px 5px 5px;
-} 
-
-:host ::ng-deep .p-hidden{
-    visibility: hidden;
+  margin: 5px 5px 5px 5px;
 }
 
+:host ::ng-deep .p-hidden {
+  visibility: hidden;
+}
 
-:host ::ng-deep .logout-class{
-    align-self: flex-end;
-    background-color: black;
-    color: white
+:host ::ng-deep .logout-class {
+  float: right;
+  /* align-self: flex-end; */
+  background-color: black;
+  color: white;
 }
